--- a/mars_data_challenge_part_2.ipynb
+++ b/mars_data_challenge_part_2.ipynb
@@ -35509,7 +35509,7 @@
     }
    ],
    "source": [
-    "#Which months have the lowest and the highest atmospheric pressure on Mars? \n",
+    "#coldest and wamerst months\n",
     "tempmin_df.sort_values(\"min_temp\", ascending=True)"
    ]
   },
@@ -35658,6 +35658,7 @@
     }
    ],
    "source": [
+    "#Which months have the lowest and the highest atmospheric pressure on Mars? \n",
     "pressure_df = MarsData_df.groupby(\"month\", as_index=False)[\"pressure\"].mean() \n",
     "pressure_df"
    ]
